staging/finanztool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: finanztool-app
    labels:
        app: finanztool
    namespace: finanztool
spec:
    replicas: 1
    selector:
        matchLabels:
            app: finanztool
    template:
        metadata:
            labels:
                app: finanztool
        spec:
            volumes:
                - name: shared-mediafiles
                  persistentVolumeClaim:
                      claimName: finanztool-mediafiles-pvc
            containers:
                - name: nginx-container
                  image: nginx
                  ports:
                      - containerPort: 7000
                        name: mediafiles-server
                  volumeMounts:
                      - name: shared-mediafiles
                        mountPath: /usr/share/nginx/html
                - name: finanztool
                  image: ghcr.io/fstum/finanztool-v2-staging:main
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8000
                        name: gunicorn
                  volumeMounts:
                      - name: shared-mediafiles
                        mountPath: /code/media
