staging/finanztool-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: finanztool-svc
    labels:
        app: finanztool
spec:
    type: NodePort
    selector:
        app: finanztool
    ports:
        - name: mediafiles-srv
          port: 7000
          targetPort: 7000
        - name: gunicorn
          port: 8000
          targetPort: 8000
