staging/finanztool_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: finanztool-ingress
    labels:
        app: finanztool
    namespace: finanztool
spec:
    routes:
        - kind: Rule
          match: Host(`finanz.frank.elsinga.de`)
          services:
              - name: finanztool-svc
                port: 8000
